[gd_scene load_steps=3 format=3 uid="uid://kcmopw4lfgrs"]

[ext_resource type="Script" path="res://audio_demo.gd" id="1_p2mfi"]

[sub_resource type="AudioStream" id="AudioStream_4tnyf"]

[node name="Node2D" type="Node2D"]
position = Vector2(505, 321)
script = ExtResource("1_p2mfi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStream_4tnyf")

[node name="Button" type="Button" parent="."]
offset_right = 143.0
offset_bottom = 50.0
text = "Play
"

[node name="BusFilter" type="HSlider" parent="."]
offset_top = 89.0
offset_right = 140.0
offset_bottom = 105.0
max_value = 20.0
step = 0.01

[node name="PitchSlider" type="HSlider" parent="."]
offset_top = 60.0
offset_right = 140.0
offset_bottom = 76.0
step = 0.001

[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
[connection signal="value_changed" from="BusFilter" to="." method="_on_bus_filter_value_changed"]
[connection signal="value_changed" from="PitchSlider" to="." method="_on_pitch_slider_value_changed"]
